--- a/anime-detail.html
+++ b/anime-detail.html
@@ -3122,6 +3122,56 @@
           }
         ]
       },
+      53: {
+        title: "Futari Solo Camp",
+        desc: "Gen Kinokura solo quería disfrutar de sus tranquilos viajes de acampada en solitario: sin distracciones ni problemas. Entonces aparece Shizuku Kusano, una novata despistada pero entusiasta que irrumpe en su campamento (literalmente). Ahora, este excursionista algo molesto se ve obligado a enseñarle los entresijos del camping. ¡Risas, percances y momentos entrañables aguardan esta aventura de acampada bajo las estrellas!",
+        cover: "futaripor.jpg",
+        seasons: [
+          {
+            num: 1,
+            cover: "https://www.dropbox.com/scl/fi/tmonp4atoj90k87ojxtdf/Airbrush-IMAGE-ENHANCER-1763472470283-1763472470284.jpg?rlkey=ctc7gslr2ttsotj67parqf8ai&st=n96z3g28&raw=1",
+            eps: [
+              { title: "Futari Solo Camp T1 Cap 1"},
+              { title: "Futari Solo Camp T1 Cap 2"},
+              { title: "Futari Solo Camp T1 Cap 3"},
+              { title: "Futari Solo Camp T1 Cap 4"},
+              { title: "Futari Solo Camp T1 Cap 5"},
+              { title: "Futari Solo Camp T1 Cap 6"},
+              { title: "Futari Solo Camp T1 Cap 7"},
+              { title: "Futari Solo Camp T1 Cap 8"},
+              { title: "Futari Solo Camp T1 Cap 9"},
+              { title: "Futari Solo Camp T1 Cap 10"},
+              { title: "Futari Solo Camp T1 Cap 11"},
+              { title: "Futari Solo Camp T1 Cap 12"},
+              { title: "Futari Solo Camp T1 Cap 13"},
+              { title: "Futari Solo Camp T1 Cap 14"},
+              { title: "Futari Solo Camp T1 Cap 15"},
+              { title: "Futari Solo Camp T1 Cap 16"},
+              { title: "Futari Solo Camp T1 Cap 17"},
+              { title: "Futari Solo Camp T1 Cap 18"},
+              { title: "Futari Solo Camp T1 Cap 19"},
+              { title: "Futari Solo Camp T1 Cap 20"},
+              { title: "Futari Solo Camp T1 Cap 21"},
+              { title: "Futari Solo Camp T1 Cap 22"},
+              { title: "Futari Solo Camp T1 Cap 23"},
+              { title: "Futari Solo Camp T1 Cap 24"},
+            ]
+          }
+        ]
+      },
+
+
+
+
+
+
+
+
+
+
+
+
+
 
     };
 
