--- a/index.html
+++ b/index.html
@@ -311,6 +311,7 @@
       {id:50, title:"Black Clover", img:"portbla.jpg", rating:4.8, genres:["Comedia","Acción","Fantasía","Aventura","Shōnen"]},
       {id:51, title:"My Hero Academia", aliases: ["Boku no Hero"], img:"sgsgsdseg.jpg", rating:4.7, genres:["Superhéroes","Ciencia ficción","Comedia","Drama","Acción","Fantasía","Escolar","Aventura","Shōnen"]},
       {id:52, title:"Kakkou no Linazuke", aliases: ["A Couple of Cuckoos"], img:"pordf.jpg", rating:4.5, genres:["Romance","Comedia","Escolar","Harem","Shōnen"]},
+      {id:53, title:"Futari Solo Camp", aliases: ["Solo Camping for Two"], img:"futaripor.jpg", rating:4.5, genres:["Romance","Comedia","Slice of Life","Seinen"]},
     ];
 
     /* ----------------------------
