--- a/video-player.html
+++ b/video-player.html
@@ -2135,6 +2135,27 @@
           "12": { link:'https://www.dropbox.com/scl/fi/se39zxuclo0p20aqqe5ml/Kakkou-no-Linazuke-T2-Cap-12.mp4?rlkey=hspz0ofmr8xvxxrm2fp44d2bk&st=15fqxy10&raw=1', link2: 'https://drive.google.com/file/d/1zc0YUKbGXMtTIEJEm___DboK7KagIsgN/preview', title:'Kakkou no Linazuke T2 Cap 12' },
         }
       },
+      "53": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/27kqf2qjib32cnmgvorxr/Futari-Solo-Camp-T1-Cap-1.mp4?rlkey=egq4fodpk50mx2te1m6f8gne9&st=l32u2i8v&raw=1', link2: 'https://drive.google.com/file/d/1ukTTcQcxqdIk1owU_kmnPHeW_3b3ARBa/preview', title:'Futari Solo Camp T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/aku079astun6bltwspizk/Futari-Solo-Camp-T1-Cap-2.mp4?rlkey=pckx4gi9dijiyxoze9d6gohxq&st=akt2oczj&raw=1', link2: 'https://drive.google.com/file/d/1viAEEEGXcINri5x4CcLwL9N6k6af_3M_/preview', title:'Futari Solo Camp T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/4tpnfz2mfgq9j8ats8xec/Futari-Solo-Camp-T1-Cap-3.mp4?rlkey=cyyahz72f0sj9ibhr15x1nop6&st=alouylg5&raw=1', link2: 'https://drive.google.com/file/d/18ffiX4q598emJ6w1bRTVRWzKg_Ibl5F_/preview', title:'Futari Solo Camp T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/e9z5ne4z212w73p8zmp03/Futari-Solo-Camp-T1-Cap-4.mp4?rlkey=8r7v8m9npjalytnps5bu5d2hc&st=j50xsgdf&raw=1', link2: 'https://drive.google.com/file/d/1O-BNXVIHFPvUK3oEf3MqWJMa3w3XZKT_/preview', title:'Futari Solo Camp T1 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/1rkfocued3zcledyg0k9n/Futari-Solo-Camp-T1-Cap-5.mp4?rlkey=m6xjiwb1lwaoq3e87zl0wgmzx&st=tcs04bwp&raw=1', link2: 'https://drive.google.com/file/d/1yoayyAhcnygUF2YMskAySYVNr9FV6e2R/preview', title:'Futari Solo Camp T1 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/d3vmgmvirzffbfccn648b/Futari-Solo-Camp-T1-Cap-6.mp4?rlkey=vwb2riv0o5pcsn8yb734vk4ix&st=w7huho5m&raw=1', link2: 'https://drive.google.com/file/d/1661vAD1Ps93nhOITwuRpTb3S6J4GWs79/preview', title:'Futari Solo Camp T1 Cap 6' },
+          "7": { link:'https://www.dropbox.com/scl/fi/wd0v6x0213k7f3yucsgni/Futari-Solo-Camp-T1-Cap-7.mp4?rlkey=lsc4hqq43k8rjdbnxhphaz7f8&st=bp7ddnzw&raw=1', link2: 'https://drive.google.com/file/d/1bvhVmEvRL894sZuwmDb9OyKAk1Kw6v5u/preview', title:'Futari Solo Camp T1 Cap 7' },
+          "8": { link:'https://www.dropbox.com/scl/fi/zha22yody4he3lnukpdig/Futari-Solo-Camp-T1-Cap-8.mp4?rlkey=p4are2drvc20fjgqv3z16w38i&st=62j83dzq&raw=1', link2: 'https://drive.google.com/file/d/1YJhH1q_OLLTS8yQRS1QjyZ3fpl3m7QiT/preview', title:'Futari Solo Camp T1 Cap 8' },
+          "9": { link:'https://www.dropbox.com/scl/fi/vrtykzva99ytwmr43alqy/Futari-Solo-Camp-T1-Cap-9.mp4?rlkey=ehtarjrnkqzggql9cefzh4a9v&st=o4ciy8ee&raw=1', link2: 'https://drive.google.com/file/d/1e7JNGXXnxVUzA9_92R5-GU_KfVMzWCFA/preview', title:'Futari Solo Camp T1 Cap 9' },
+          "10": { link:'https://www.dropbox.com/scl/fi/o89feomxmmkqtwcrdiubt/Futari-Solo-Camp-T1-Cap-10.mp4?rlkey=3s2p02w2hn92uo0zj086iq1ox&st=yivjdvxo&raw=1', link2: 'https://drive.google.com/file/d/1kKbTiIx8VixgdbZSJoMC7fr0vb53PO3u/preview', title:'Futari Solo Camp T1 Cap 10' },
+          "11": { link:'https://www.dropbox.com/scl/fi/rco31gzlx9zhblc924hye/Futari-Solo-Camp-T1-Cap-11.mp4?rlkey=8t2zbql9vcx00rd3repgrv07o&st=4r0k80ua&raw=1', link2: 'https://drive.google.com/file/d/1buMp7jZo6L20wcRMXVTxtWlY1C_F2Djg/preview', title:'Futari Solo Camp T1 Cap 11' },
+          "12": { link:'https://www.dropbox.com/scl/fi/z54henh412bn6nw2atj3m/Futari-Solo-Camp-T1-Cap-12.mp4?rlkey=kfnsmz4vhr4rgt870bbi6070e&st=y47yxois&raw=1', link2: 'https://drive.google.com/file/d/1tVSnilDvVGfT3RPU-HeTCNLxmupOx63G/preview', title:'Futari Solo Camp T1 Cap 12' },
+          "13": { link:'https://www.dropbox.com/scl/fi/zazzntx8laj0wix5ztvtr/Futari-Solo-Camp-T1-Cap-13.mp4?rlkey=e72vtnqo0gltr286y0pxz3sri&st=1fut28fn&raw=1', link2: 'https://drive.google.com/file/d/1pNIXibimqESPruJSjt8AXm58OBkHMRkt/preview', title:'Futari Solo Camp T1 Cap 13' },
+          "14": { link:'https://www.dropbox.com/scl/fi/70jgkdfis4gdizt3z4co3/Futari-Solo-Camp-T1-Cap-14.mp4?rlkey=keort7bnffp41hbsiu88km2a0&st=bf8kahu8&raw=1', link2: 'https://drive.google.com/file/d/1f1qcrSFvfgioQy7BudvyBq6ne0d0_LuS/preview', title:'Futari Solo Camp T1 Cap 14' },
+        }
+      },
+
+
+
 
 
 
