--- a/video-player.html
+++ b/video-player.html
@@ -1814,7 +1814,7 @@
           "5": { link:'https://www.dropbox.com/scl/fi/7i5ef3ptq74xyx8vuh48k/Hazbin-Hotel-T2-Cap-5.mp4?rlkey=vp6ur1n966jporyd40yi6shb9&st=lrntinza&raw=1', link2: 'https://drive.google.com/file/d/1oEBrgMsGjOkiu8vmEmkAaCjh9Qt-15nb/preview', title:'Hazbin Hotel T2 Cap 5' },
           "6": { link:'https://www.dropbox.com/scl/fi/xd22w4fds4r7yse21lt3d/Hazbin-Hotel-T2-Cap-6.mp4?rlkey=m9wdsj3deg5qx0p2ck00sbi9s&st=6ah1qvdb&raw=1', link2: 'https://drive.google.com/file/d/1gXcYo2Av5UX-VlaO3FnCxA9wQNgds_bP/preview', title:'Hazbin Hotel T2 Cap 6' },
           "7": { link:'https://www.dropbox.com/scl/fi/gw9rksr71srpkj22ji26e/Hazbin-Hotel-T2-Cap-7.mp4?rlkey=np0sqlrzvg45ohi3iflum08mn&st=6caee4r2&raw=1', link2: 'https://drive.google.com/file/d/18oEVI1UWbHhV5bMJWeqzBBf0DnidET0d/preview', title:'Hazbin Hotel T2 Cap 7' },
-          "8": { link:'&raw=1', title:'Hazbin Hotel T2 Cap 8' },
+          "8": { link:'https://www.dropbox.com/scl/fi/0snb7xz2od7bvx6ofdnd1/Hazbin-Hotel-T2-Cap-8.mp4?rlkey=q48ef41xf3g2n5dre8ju2pvdp&st=chy0mgjb&raw=1', link2: 'https://drive.google.com/file/d/1Le05_HfwsBy9ze3L84yYQbh2M6MLuPR8/preview', title:'Hazbin Hotel T2 Cap 8' },
         }
       },
       "48": {
