--- a/video-player.html
+++ b/video-player.html
@@ -1487,7 +1487,7 @@
           "13": { link:'https://www.dropbox.com/scl/fi/ne414qzca7utlcr3qd7bf/Gachiakuta-T1-Cap-13.mp4?rlkey=jdxsvj9u1wg2xw103j3goeeen&st=sm953xed&raw=1', link2: 'https://drive.google.com/file/d/1MUQh3GSu8IESIO9LgvgN_Q_zAs7mqfcr/preview', title:'Gachiakuta T1 Cap 13' },
           "14": { link:'https://www.dropbox.com/scl/fi/ovzrqwtzo63nh3xbs5heg/Gachiakuta-T1-Cap-14.mp4?rlkey=grbhc4ca22kkyoiiyv4mgzgsm&st=zb0fjqno&raw=1', link2: 'https://drive.google.com/file/d/1mi1DOfh5WY4AODHWnTOODj6dHZz8PFrw/preview', title:'Gachiakuta T1 Cap 14' },
           "15": { link:'https://www.dropbox.com/scl/fi/uqtiasi9049suz67w91mw/Gachiakuta-T1-Cap-15.mp4?rlkey=rt4cz9w4uzbkbm4sbomqg729f&st=j78mmd0n&raw=1', link2: 'https://drive.google.com/file/d/145mtOjsmppJbYSxGaekgzmd_tdFRdHAl/preview', title:'Gachiakuta T1 Cap 15' },
-          "16": { link:'&raw=1', title:'Gachiakuta T1 Cap 16' },
+          "16": { link:'https://www.dropbox.com/scl/fi/gskk37ewm8iqq4nqqklqa/Gachiakuta-T1-Cap-16.mp4?rlkey=r9uagn7mrg2j89odijzpf60w7&st=rqz3kerl&raw=1', link2: 'https://drive.google.com/file/d/1qFWtIiOMn_fFyRPXx_n5wb9XZs3zOdxP/preview', title:'Gachiakuta T1 Cap 16' },
           "17": { link:'&raw=1', title:'Gachiakuta T1 Cap 17' },
           "18": { link:'&raw=1', title:'Gachiakuta T1 Cap 18' },
           "19": { link:'&raw=1', title:'Gachiakuta T1 Cap 19' },
@@ -1807,12 +1807,12 @@
           "8": { link:'https://www.dropbox.com/scl/fi/2kz30t1t2cw5xwrlawc52/Hazbin-Hotel-T1-Cap-8.mp4?rlkey=2wde6yt3i9zrsgggbw00fqd4p&st=v6kz9xj7&raw=1', link2: 'https://drive.google.com/file/d/1j0T4P1DfDqiznB_Nr8DtlBENFBJPTPGf/preview', title:'Hazbin Hotel T1 Cap 8' },
         },
         "2": {
-          "1": { link:'https://www.dropbox.com/scl/fi/s3rm100j6bi647jramd1r/Hazbin-Hotel-T2-Cap-1.mp4?rlkey=0xv5hnfsqeo7ao226agxjxk2f&st=gis9sik5&raw=1', link2: 'https://drive.google.com/file/d/1Hot79S6XqJsUyu5syrJNtVay5XC9EWgI/preview', title:'Hazbin Hotel T2 Cap 1' },
-          "2": { link:'https://www.dropbox.com/scl/fi/acz9cphi61rzvdlkdz1uw/Hazbin-Hotel-T2-Cap-2.mp4?rlkey=hzhchz0y7qsb26rww62kzmlzc&st=h6doo23f&raw=1', link2: 'https://drive.google.com/file/d/1kAHa91tZutKELb1-UlywxcR-fGfLrhXd/preview', title:'Hazbin Hotel T2 Cap 2' },
-          "3": { link:'https://www.dropbox.com/scl/fi/tlz1vgmxueea8j3qcwtnu/Hazbin-Hotel-T2-Cap-3.mp4?rlkey=yf7c7p50tzfnlbx3aktaye6u5&st=5aafop46&raw=1', link2: 'https://drive.google.com/file/d/1p8lbr89-Jnf_hIel1duWzuLWrNAB6vB8/preview', title:'Hazbin Hotel T2 Cap 3' },
-          "4": { link:'https://www.dropbox.com/scl/fi/s4k5r19nf89i9naxgw0y0/Hazbin-Hotel-T2-Cap-4.mp4?rlkey=pcns0hcwzqloko61r2dd2qbb9&st=rw71n1z5&raw=1', link2: 'https://drive.google.com/file/d/18OqiAdW3bY5pdcv-VYsPOrbqiZEzisI0/preview', title:'Hazbin Hotel T2 Cap 4' },
-          "5": { link:'https://www.dropbox.com/scl/fi/7i5ef3ptq74xyx8vuh48k/Hazbin-Hotel-T2-Cap-5.mp4?rlkey=vp6ur1n966jporyd40yi6shb9&st=lrntinza&raw=1', link2: 'https://drive.google.com/file/d/1oEBrgMsGjOkiu8vmEmkAaCjh9Qt-15nb/preview', title:'Hazbin Hotel T2 Cap 5' },
-          "6": { link:'https://www.dropbox.com/scl/fi/xd22w4fds4r7yse21lt3d/Hazbin-Hotel-T2-Cap-6.mp4?rlkey=m9wdsj3deg5qx0p2ck00sbi9s&st=6ah1qvdb&raw=1', link2: 'https://drive.google.com/file/d/1gXcYo2Av5UX-VlaO3FnCxA9wQNgds_bP/preview', title:'Hazbin Hotel T2 Cap 6' },
+          "1": { link:'https://www.dropbox.com/scl/fi/0ggizvmq6zobtqoyzdrxl/Hazbin-Hotel-T2-Cap-1.mp4?rlkey=b5xpmmn5v10fxqcbvuboskw6x&st=djwu6vpa&raw=1', link2: 'https://drive.google.com/file/d/1Yn-9-IT_S8RwP548XkI8LYNkH2Ed_LtR/preview', title:'Hazbin Hotel T2 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/0us3wx7ai0znjqo0w87kh/Hazbin-Hotel-T2-Cap-2.mp4?rlkey=ionw8la37kfsyik2n7mmz8fuq&st=04nk8vrj&raw=1', link2: 'https://drive.google.com/file/d/1nE3fYvVd4eiQBXIDe52UmJBjQoFX2lWl/preview', title:'Hazbin Hotel T2 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/4o7bynf1j33h3hi5nepay/Hazbin-Hotel-T2-Cap-3.mp4?rlkey=cr1dwwqb9ahsndgmdjk7fwj9h&st=n5b37mx8&raw=1', link2: 'https://drive.google.com/file/d/1uWrWj437JyO0WkpGqYMBG2nOR3aDaTY0/preview', title:'Hazbin Hotel T2 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/nrxcwryni2fikbblxd3nm/Hazbin-Hotel-T2-Cap-4.mp4?rlkey=zl9wdxx5oug6qvzxl8uaelwv5&st=7ifzrod4&raw=1', link2: 'https://drive.google.com/file/d/1oOrg4o34qT953F1kp1B1e5rOmWY6ObyW/preview', title:'Hazbin Hotel T2 Cap 4' },
+          "5": { link:'https://www.dropbox.com/scl/fi/p6z6m56sldza22e22nwh2/Hazbin-Hotel-T2-Cap-5.mp4?rlkey=woym5ldevjetcnt09oin34qne&st=rz8ijg58&raw=1', link2: 'https://drive.google.com/file/d/13QI-7v7cQNa6Uh1yaiUAxxuf7WyqaPJH/preview', title:'Hazbin Hotel T2 Cap 5' },
+          "6": { link:'https://www.dropbox.com/scl/fi/rixjs96lkxen1y28io9ac/Hazbin-Hotel-T2-Cap-6.mp4?rlkey=d6n5lx3rnj5f2rqay9o6t9x03&st=c7qlrk1c&raw=1', link2: 'https://drive.google.com/file/d/1DFntXDbWuSX3WHaXNOYIw-r87yM7msih/preview', title:'Hazbin Hotel T2 Cap 6' },
           "7": { link:'https://www.dropbox.com/scl/fi/gw9rksr71srpkj22ji26e/Hazbin-Hotel-T2-Cap-7.mp4?rlkey=np0sqlrzvg45ohi3iflum08mn&st=6caee4r2&raw=1', link2: 'https://drive.google.com/file/d/18oEVI1UWbHhV5bMJWeqzBBf0DnidET0d/preview', title:'Hazbin Hotel T2 Cap 7' },
           "8": { link:'https://www.dropbox.com/scl/fi/0snb7xz2od7bvx6ofdnd1/Hazbin-Hotel-T2-Cap-8.mp4?rlkey=q48ef41xf3g2n5dre8ju2pvdp&st=chy0mgjb&raw=1', link2: 'https://drive.google.com/file/d/1Le05_HfwsBy9ze3L84yYQbh2M6MLuPR8/preview', title:'Hazbin Hotel T2 Cap 8' },
         }
@@ -2090,7 +2090,7 @@
       "51": {
         "1": {
           "1": { link:'https://www.dropbox.com/scl/fi/sr54vz6tfaj7oqum850da/My-Hero-Academia-T8-Cap-1.mp4?rlkey=pzm4ztsdrcsj8kesrox9zlugi&st=oq2p9m3y&raw=1', link2: 'https://drive.google.com/file/d/1C16zoogP1JPPZANScxJP0z67WTxZYgIq/preview', title:'My Hero Academia T8 Cap 1' },
-          "1": { link:'https://www.dropbox.com/scl/fi/bnebnja6hlins0uim6eqx/My-Hero-Academia-T8-Cap-2.mp4?rlkey=n092mfb3wrjrm6w4h6p111ty2&st=xfbcbml9&aw=1', link2: 'https://drive.google.com/file/d/15EYYksOimq9RBKI89LCdtqZ-CXWEFv3l/preview', title:'My Hero Academia T8 Cap 2' },
+          "2": { link:'https://www.dropbox.com/scl/fi/bnebnja6hlins0uim6eqx/My-Hero-Academia-T8-Cap-2.mp4?rlkey=n092mfb3wrjrm6w4h6p111ty2&st=xfbcbml9&raw=1', link2: 'https://drive.google.com/file/d/15EYYksOimq9RBKI89LCdtqZ-CXWEFv3l/preview', title:'My Hero Academia T8 Cap 2' },
         }
       },
       "52": {
@@ -2151,6 +2151,8 @@
           "12": { link:'https://www.dropbox.com/scl/fi/z54henh412bn6nw2atj3m/Futari-Solo-Camp-T1-Cap-12.mp4?rlkey=kfnsmz4vhr4rgt870bbi6070e&st=y47yxois&raw=1', link2: 'https://drive.google.com/file/d/1tVSnilDvVGfT3RPU-HeTCNLxmupOx63G/preview', title:'Futari Solo Camp T1 Cap 12' },
           "13": { link:'https://www.dropbox.com/scl/fi/zazzntx8laj0wix5ztvtr/Futari-Solo-Camp-T1-Cap-13.mp4?rlkey=e72vtnqo0gltr286y0pxz3sri&st=1fut28fn&raw=1', link2: 'https://drive.google.com/file/d/1pNIXibimqESPruJSjt8AXm58OBkHMRkt/preview', title:'Futari Solo Camp T1 Cap 13' },
           "14": { link:'https://www.dropbox.com/scl/fi/70jgkdfis4gdizt3z4co3/Futari-Solo-Camp-T1-Cap-14.mp4?rlkey=keort7bnffp41hbsiu88km2a0&st=bf8kahu8&raw=1', link2: 'https://drive.google.com/file/d/1f1qcrSFvfgioQy7BudvyBq6ne0d0_LuS/preview', title:'Futari Solo Camp T1 Cap 14' },
+          "15": { link:'https://www.dropbox.com/scl/fi/sa262ffs951iq3ppbd2n7/Futari-Solo-Camp-T1-Cap-15.mp4?rlkey=k2bendwobd3ckof3fhcgvj6vo&st=c78gwqa4&raw=1', link2: 'https://drive.google.com/file/d/1g4WCqEzM2wiZYX7tjC-za-I9yBjOlA5v/preview', title:'Futari Solo Camp T1 Cap 13' },
+          "16": { link:'https://www.dropbox.com/scl/fi/m7o5uida81hxj9hdoteo9/Futari-Solo-Camp-T1-Cap-16.mp4?rlkey=ch0kjyhkagbu1xulleofxhdsw&st=9sf2eblj&raw=1', link2: 'https://drive.google.com/file/d/1FBNlU1HMLRCERe4G1SP5pyjEk3NqBpoy/preview', title:'Futari Solo Camp T1 Cap 14' },
         }
       },
 
@@ -2169,10 +2171,8 @@
       if (q) return q[1];
       return null;
     }
-
-    // Mostrar preview de Drive con iframe. Al mostrar iframe ocultamos el <video> para que no deje espacio.
     function insertDrivePreview(fileId) {
-      resetPlayerView(); // esto quitará cualquier iframe previo y ocultará el video
+      resetPlayerView();
       const iframe = document.createElement('iframe');
       iframe.id = 'drive-iframe';
       iframe.src = `https://drive.google.com/file/d/${fileId}/preview`;
@@ -2182,14 +2182,10 @@
       iframe.allow = 'autoplay; encrypted-media; fullscreen';
       iframe.style.borderRadius = '6px';
       iframe.style.opacity = '0';
-      // insertamos el iframe (después del <video>) — el <video> ya está oculto por resetPlayerView()
       player.parentNode.insertBefore(iframe, player.nextSibling);
-      // asegurar que el video no ocupe espacio
-      player.style.display = 'none';
       // aparecer suave
       setTimeout(()=> iframe.style.opacity = '1', 50);
     }
-
     function buildForcedDownloadLink(originalLink) {
       if (!originalLink) return '#';
       const driveId = getDriveFileId(originalLink);
@@ -2234,9 +2230,7 @@
       } catch (err) {}
       player.removeAttribute('src');
       while (player.firstChild) player.removeChild(player.firstChild);
-      // ocultar visualmente el vídeo para que no deje espacio cuando se muestre un iframe
       player.style.opacity = '0';
-      player.style.display = 'none';
     }
 
     function showPlayerError(msg) {
@@ -2265,7 +2259,7 @@
         return;
       }
 
-      // limpiar vista previa previa (elimina iframe si existe y oculta el video)
+      // limpiar vista previa previa
       resetPlayerView();
 
       // oculta error si había alguno
@@ -2283,11 +2277,6 @@
         opt2Btn.classList.toggle('active', opts.label === 'Opción 2');
         return;
       }
-
-      // Si llegamos aquí, es una fuente de video (mp4 u otra directa).
-      // Asegurarnos de mostrar el <video> (y quitar display:none).
-      player.style.display = '';
-      player.style.opacity = '0'; // hasta que cargue y dispare events
 
       // crear <source> dentro del <video>
       const src = document.createElement('source');
@@ -2547,4 +2536,4 @@
 
   </script>
 </body>
-</html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                         
+</html>                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                                             
