--- a/anime-detail.html
+++ b/anime-detail.html
@@ -165,7 +165,7 @@
 <body>
   <!-- Vídeo de fondo: tiene poster para que el navegador muestre la imagen hasta que haya primer frame -->
   <video id="bg-video" poster="galaxia-poster.jpg" autoplay muted loop playsinline>
-    <source src="https://www.dropbox.com/scl/fi/g7jmt1inbplxbwgh5q19l/yyyy.mp4?rlkey=lilw3dbar3xtovu8d37uxfo1s&st=7l0juzp5&raw=1" type="video/mp4">
+    <source src="galaxiaceleste.mp4" type="video/mp4">
   </video>
   <!-- overlay con la imagen/poster: se ocultará cuando el video dispare 'playing' -->
   <div id="overlay"></div>
