--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 
   <!-- Vídeo de fondo -->
   <video id="bg-video" poster="galaxia-poster.jpg" autoplay muted loop playsinline preload="auto">
-    <source src="https://www.dropbox.com/scl/fi/g7jmt1inbplxbwgh5q19l/yyyy.mp4?rlkey=lilw3dbar3xtovu8d37uxfo1s&st=7l0juzp5&raw=1" type="video/mp4">
+    <source src="galaxiaceleste.mp4" type="video/mp4">
     Tu navegador no soporta vídeo.
   </video>
   <div id="overlay" aria-hidden="true"></div>
