--- a/video-player.html
+++ b/video-player.html
@@ -2285,6 +2285,22 @@
           "16": { link:'https://www.dropbox.com/scl/fi/m7o5uida81hxj9hdoteo9/Futari-Solo-Camp-T1-Cap-16.mp4?rlkey=ch0kjyhkagbu1xulleofxhdsw&st=9sf2eblj&raw=1', link2: 'https://drive.google.com/file/d/1FBNlU1HMLRCERe4G1SP5pyjEk3NqBpoy/preview', title:'Futari Solo Camp T1 Cap 14' },
         }
       },
+      "54": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/ipb4lc6jiaqacb6al4y2v/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-1.mp4?rlkey=7796r6pwfdbbjvk0rl9l7tnzr&st=u4huftos&raw=1', link2: 'https://drive.google.com/file/d/1CNEjy7XOSsWioiEbsy3aCyhy0K5l88k3/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/zfv6optbgdlhk9yrbyimb/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-2.mp4?rlkey=k2n3ma25tmhkptlorprj234fi&st=jtf97b5e&raw=1', link2: 'https://drive.google.com/file/d/1-TAltIstu2c6oReESC1WZDGstP6RoLgW/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/9i7ycmk5wwxa0ja0uhpgk/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-3.mp4?rlkey=yt8tg9r5tfoq31x02qst6zc9y&st=egtk9xj7&raw=1', link2: 'https://drive.google.com/file/d/1ZYTNt-vrHLTFEvDuscNs-3JC5fLZC4f2/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/6u0gyjxomjfvh2nm40l0w/T-jima-Tanzabur-wa-Kamen-Rider-ni-Naritai-T1-Cap-4.mp4?rlkey=7ul5jfhj5h4rkttdj5vwfrne3&st=6eu62t5d&raw=1', link2: 'https://drive.google.com/file/d/1FY_jZ61wRtSTS6akzxOvYvBvqTBXGcV8/preview', title:'Tōjima Tanzaburō wa Kamen Rider ni Naritai T1 Cap 4' },
+        }
+      },
+      "55": {
+        "1": {
+          "1": { link:'https://www.dropbox.com/scl/fi/d87x1ly4mig7ze5oki8mk/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-1.mp4?rlkey=w4eeb6gqr4u6hxnisrpcf1r4k&st=sss8ata8&raw=1', link2: 'https://drive.google.com/file/d/1mEIH1hK2ccpe8VpjluHlV_KYqaVDX1VG/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 1' },
+          "2": { link:'https://www.dropbox.com/scl/fi/k9bbmwg8sfypxyadooayu/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-2.mp4?rlkey=nrcqdk40vbrz9lq79pzc5hh5c&st=ne2zz2el&raw=1', link2: 'https://drive.google.com/file/d/1tEil2U0reV7OyVKraELJy0TY3QjEm_6_/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 2' },
+          "3": { link:'https://www.dropbox.com/scl/fi/uqh3bni3aocfj12clor7r/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-3.mp4?rlkey=rtytkar8d973rd7mquz3z1tr3&st=eh0z7dsi&raw=1', link2: 'https://drive.google.com/file/d/1XO_b-XfmYFmbhBWyewV8cWhagGROZvGj/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 3' },
+          "4": { link:'https://www.dropbox.com/scl/fi/1vetm4oi2yfkum6qy76bf/Alma-chan-wa-Kazoku-ni-Naritai-T1-Cap-4.mp4?rlkey=t4yxb3f6tnhslvyd1y0cwiphg&st=285328hq&raw=1', link2: 'https://drive.google.com/file/d/1tycCUt59hcHopKPxqkPaZi6CJASstaZn/preview', title:'Alma-chan wa Kazoku ni Naritai T1 Cap 4' },
+        }
+      },
 
 
 
@@ -2558,7 +2574,7 @@
 
       const failTimer = setTimeout(()=> {
         if (player.readyState < 3) {
-
+          showToast('Uy… esto está tardando demasiado en cargar 🐢💤. Mejor pruebe otra opción.');
         }
       }, 12000);
     }
